--- a/hola.html
+++ b/hola.html
@@ -11,6 +11,7 @@
 <body>
     <h1>Bienvenidos a Integración Continua</h1>
     <h2>prueba travis</h2>
+    <p>Integración continua</p>
 </body>
 
 </html>
