--- a/hola.html
+++ b/hola.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Bienvenidos a Integración Continua</h1>
-    <h2>prueba travis</h2>
+    <h2>prueba travis2</h2>
 </body>
 
 </html>
