--- a/travis.html
+++ b/travis.html
@@ -11,7 +11,7 @@
 <body>
 
     <h1>travis</h1>
-    <h1>modificacion travis en Git</h1>
+    <h1>modificacion TRAVIS GITHUB</h1>
 </body>
 
 </html>
